# smartparks-opencollar-edge-fw-public

./: .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  east.yml  makefile  typos.toml  west.yml
app/: CMakeLists.txt  Kconfig  pm_static.yml  pm_static_debug.yml
app/child_image/: mcuboot.conf
app/conf/: common.conf  debug.conf  disable_mcuboot.conf  log_rtt.conf  prov.conf
app/src/: main.c
app/src/battery/: CMakeLists.txt  battery_interface.c  battery_interface.h
app/src/bt_module/: CMakeLists.txt  Kconfig  bt_interface.c  bt_interface.h
app/src/bt_module/bt_adv/: CMakeLists.txt  bt_adv.c  bt_adv.h
app/src/bt_module/bt_cmdq/: CMakeLists.txt  Kconfig  README.md  bt_cmdq.c  bt_cmdq.h  bt_cmdq_messaging.c  bt_cmdq_messaging.h
app/src/bt_module/bt_con/: CMakeLists.txt  bt_con.c  bt_con.h
app/src/bt_module/bt_nus/: CMakeLists.txt  bt_nus.c  bt_nus.h
app/src/bt_module/bt_scan/: CMakeLists.txt  README.md  bt_scan.c  bt_scan.h
app/src/charging/: CMakeLists.txt  charging_interface.c  charging_interface.h  charging_voltage_adjustment.c  charging_voltage_adjustment.h
app/src/communication/: CMakeLists.txt  communication.c  communication.h
app/src/communication/lr_messaging/: CMakeLists.txt  lr_messaging.c  lr_messaging.h
app/src/flash/: CMakeLists.txt  Kconfig  README.md  flash_ext_partitions.c  flash_ext_partitions.h  flash_interface.c  flash_interface.h
app/src/gps_ublox/: CMakeLists.txt  README.md  gps.c  gps.h  gps_ublox.cpp  gps_ublox.h  gps_ublox_interface.cpp  gps_ublox_interface.h
app/src/gps_ublox/minmea/: CMakeLists.txt  minmea.c  minmea.h
app/src/led/: CMakeLists.txt  led.c  led.h
app/src/lorawan/: CMakeLists.txt  Kconfig  lorawan.c  lorawan.h
app/src/lorawan/almanac/: CMakeLists.txt  README.md  almanac.c  almanac.h  lr11xx_almanac.c
app/src/lorawan/gnss/: CMakeLists.txt  gnss.c  gnss.h
app/src/lorawan/lr_s_band/: CMakeLists.txt  Kconfig  README.md  lr_s_band.c  lr_s_band.h
app/src/lorawan/vhf/: CMakeLists.txt  README.md  vhf.c  vhf.h
app/src/lorawan/wifi_scan/: CMakeLists.txt  Kconfig  README.md  wifi_scan.c  wifi_scan.h
app/src/lorawan/wifi_scan/wifi_scan_data/: CMakeLists.txt  wifi_scan_data.c  wifi_scan_data.h
app/src/lp0/: CMakeLists.txt  Kconfig  README.md  lp0.c  lp0.h
app/src/lp0/lp0_common/: lp0_common.h
app/src/lp0/lp0_offload/: CMakeLists.txt  lp0_offload.c  lp0_offload.h
app/src/mic/: CMakeLists.txt  Kconfig  mic_interface.c  mic_interface.h
app/src/mic/t5838/: CMakeLists.txt  Kconfig  README.md  t5838_interface.c  t5838_interface.h
app/src/mic/vm1010/: CMakeLists.txt  Kconfig  vm1010.c  vm1010.h
app/src/mic/vm3011/: CMakeLists.txt  Kconfig  vm3011.c  vm3011.h  vm3011_interface.c  vm3011_interface.h
app/src/operation_test/: README.md  operation_test.c  operation_test.h
app/src/outdoor_detection/: CMakeLists.txt  Kconfig  README.md  outdoor_detection.c  outdoor_detection.h
app/src/outdoor_detection/common/: common_utils.c  common_utils.h
app/src/reed/: CMakeLists.txt  reed.c  reed.h
app/src/satellite/: CMakeLists.txt  Kconfig  README.md  satellite.c  satellite.h
app/src/sensors/: CMakeLists.txt  Kconfig  sensors.c  sensors.h
app/src/sensors/air_quality/: CMakeLists.txt  Kconfig  README.md  air_quality.c  air_quality.h
app/src/sensors/fence_port/: CMakeLists.txt  README.md
app/src/sensors/lis2dw12_sensor/: CMakeLists.txt  Kconfig  lis2dw12_sensor.c  lis2dw12_sensor.h  lis2dw12_sensor_fifo.c  lis2dw12_sensor_fifo.h
app/src/sensors/temperature_sensor/: CMakeLists.txt  temperature_sensor.c  temperature_sensor.h
app/src/settings/: CMakeLists.txt  README.md  nvs_storage.c  nvs_storage.h  settings_interface.c  settings_interface.h
app/src/settings/generated_settings/: CMakeLists.txt  commands_def.h  generated_settings.c  generated_settings.h  messages_def.c  messages_def.h  settings_def.c  settings_def.h  settings_types.h  type_conversion.c  type_conversion.h  values_def.c  values_def.h
app/src/threads/: CMakeLists.txt  common_functions.c  common_functions.h  definitions.h
app/src/threads/global_time/: CMakeLists.txt  global_time.c  global_time.h
app/src/threads/thread_com/: CMakeLists.txt  thread_com.c  thread_com.h
app/src/threads/thread_operation/: CMakeLists.txt  thread_operation.c  thread_operation.h
app/src/threads/thread_status/: CMakeLists.txt  status.c  status.h
app/src/threads/thread_watchdog/: CMakeLists.txt  thread_watchdog.c  thread_watchdog.h
docs/: tests_output.json  (+1 more)
samples/fence/: CMakeLists.txt  prj.conf
samples/fence/src/: main.c
samples/lp0_send_and_receive/: CMakeLists.txt  prj.conf
samples/lp0_send_and_receive/src/: main.c
samples/lr11xx-transceiver-update/: CMakeLists.txt  Kconfig  README.md  prj.conf
samples/lr11xx-transceiver-update/boards/: collaredge_nrf52840_1_1_0.conf  rangeredge_nrf52840_1_4_0.conf
samples/lr11xx-transceiver-update/src/: main.c
samples/lr11xx-transceiver-update/src/firmware_images/: lr1110_transceiver_0303.h  lr1110_transceiver_0304.h  lr1110_transceiver_0305.h  lr1110_transceiver_0306.h  lr1110_transceiver_0307.h  lr1120_transceiver_0101.h
samples/lr11xx-transceiver-update/src/firmware_update/: CMakeLists.txt  lr11xx_firmware_update.c  lr11xx_firmware_update.h
samples/mic/: CMakeLists.txt  README.md  prj.conf
samples/mic/src/: main.c
tests/outdoor_detection_test/: CMakeLists.txt  testcase.yaml
tests/outdoor_detection_test/src/: main.c
(+209 files in other folders)
